--- a/index.html
+++ b/index.html
@@ -25,7 +25,15 @@
             </div>
         </main>
         <footer>
-
+            <div class="div4">
+                <p>Advertising</p>
+                <p>Business</p>
+                <p>About</p>
+                <p>How Search Works</p>
+                <p>Privacy</p>
+                <p>Terms</p>
+                <p>Settings</p>
+            </div>
         </footer>
     </body>
 </html>
