Google Homepage done

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <body>
         <header>
             <div class="div1">
-                <p class="header1">Gmail</p>
-                <p class="header1">Images</p>
+                <a class="header1" href="">Gmail</a>
+                <a class="header1">Images</a>
                 <svg class="buttons" focusable="false" viewBox="0 0 24 24"><path d="M6,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM16,6c0,1.1 0.9,2 2,2s2,-0.9 2,-2 -0.9,-2 -2,-2 -2,0.9 -2,2zM12,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2z"></path></svg>
                 <img id="profile-image" src="https://lh3.googleusercontent.com/ogw/ADGmqu8bN0XPhG1JeKsDI3OIFxbjn9MvLBbUOb0UwSRE=s32-c-mo">
             </div>
@@ -20,19 +20,19 @@
                 <input class="search" type="text">
             </div>
             <div class="div3">
-                <button>Search</button>
-                <button>Im lucky</button>
+                <button>Google Search</button>
+                <button>I'm Feeling Lucky</button>
             </div>
         </main>
         <footer>
             <div class="div4">
-                <p>Advertising</p>
-                <p>Business</p>
-                <p>About</p>
-                <p>How Search Works</p>
-                <p>Privacy</p>
-                <p>Terms</p>
-                <p>Settings</p>
+                <a class="foo1">Advertising</a>
+                <a class="foo1">Business</a>
+                <a class="foo1">About</a>
+                <a class="foo1">How Search Works</a>
+                <a class="foo2">Settings</a>
+                <a class="foo2">Terms</a>
+                <a class="foo2">Privacy</a>
             </div>
         </footer>
     </body>
